--- a/package.json
+++ b/package.json
@@ -8,12 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.1.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/slider": "^4.1.12",
+    "@react-native-firebase/app": "^14.0.1",
+    "@react-native-firebase/database": "^14.0.1",
+    "@ui-kitten/components": "^5.1.1",
+    "@ui-kitten/eva-icons": "^5.1.1",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "firebase": "^9.6.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
